@@ -1,5 +1,13 @@
 2006-03-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Dialog_Base_Partition.cc,
+	  src/FrameVisualDisk.cc: added FIXME
+	* src/Win_GParted.cc: force processing of all pending Gtk::Main events
+	  after Refresh_Visual. This fixes an issue with incorrect displayed
+	  Visual Partition Display.
+	
+2006-03-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Frame_Resizer_Base.h,
 	  include/Frame_Resizer_Extended.h,
 	  src/Dialog_Base_Partition.cc,
